[Fix] - /mao::stats : collapse of style

--- a/src/app/public/sass/_user-slidebar.scss
+++ b/src/app/public/sass/_user-slidebar.scss
@@ -56,8 +56,8 @@
     }
 
     &--out {
-      // @include transform(translate3d(100%, 0, 0));
-      display: none;
+      @include transform(translate3d(100%, 0, 0));
+      // display: none;
     }
 
     & .btn {
